// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayButton should render a block button 1`] = `<button class="btn btn-block btn-primary"></button>`;

exports[`ClayButton should render a button with classes 1`] = `<button class="btn my-custom-class btn-primary"></button>`;

exports[`ClayButton should render a button with icon 1`] = `
<button class="btn btn-primary" aria-label="plus">
  <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus">
    <title>plus</title>
    <use xlink:href="icons.svg#plus"></use>
  </svg>
</button>
`;

exports[`ClayButton should render a button with icon and label 1`] = `
<button class="btn btn-primary">
  <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus">
    <title>plus</title>
    <use xlink:href="icons.svg#plus"></use>
  </svg>Label</button>
`;

exports[`ClayButton should render a button with icon and monospaced true 1`] = `
<button class="btn btn-monospaced btn-primary" aria-label="plus">
  <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus">
    <title>plus</title>
    <use xlink:href="icons.svg#plus"></use>
  </svg>
</button>
`;

exports[`ClayButton should render a button with id 1`] = `<button class="btn btn-primary" id="myId"></button>`;

exports[`ClayButton should render a button with label 1`] = `<button class="btn btn-primary">Label</button>`;

exports[`ClayButton should render a button with label and ariaLabel 1`] = `<button class="btn btn-primary" aria-label="My Description">Visit Liferay.com</button>`;

exports[`ClayButton should render a button with label and icon 1`] = `
<button class="btn btn-primary">Label
  <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus">
    <title>plus</title>
    <use xlink:href="icons.svg#plus"></use>
  </svg>
</button>
`;

exports[`ClayButton should render a button with name 1`] = `<button class="btn btn-primary" name="myButton"></button>`;

exports[`ClayButton should render a disabled button 1`] = `<button class="btn btn-primary" disabled=""></button>`;

exports[`ClayButton should render a secondary button 1`] = `<button class="btn btn-secondary"></button>`;

exports[`ClayButton should render a small button 1`] = `<button class="btn btn-sm btn-primary"></button>`;

exports[`ClayButton should render a submit button 1`] = `<button class="btn btn-primary" type="submit"></button>`;

exports[`ClayButton should render the default markup 1`] = `<button class="btn btn-primary"></button>`;
